# z1

./: README.md  keyboard.py  main.py  pino_main.py  test.py  utils.py
Simulator/: keyboard.py  teleop.py
Teleop/: vr_teleop.py  vr_tracker.py
assets/z1/meshes/visual/: z1_GripperMover.stl  z1_GripperStator.stl  z1_Link02.stl  z1_Link03.stl  z1_Link04.stl  z1_Link05.stl
assets/z1/urdf/: z1.urdf  z1_original.urdf
planning/: bridge.py  simulator.py
planning/moveit/src/z1config/: .setup_assistant  CMakeLists.txt  package.xml
planning/moveit/src/z1config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  z1description.ros2_control.xacro  z1description.srdf  z1description.urdf.xacro
planning/moveit/src/z1config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
planning/moveit/src/z1description/: CMakeLists.txt  package.xml
planning/moveit/src/z1description/urdf/: robot.xacro  z1.urdf
planning/moveit/src/z1planner/: CMakeLists.txt  package.xml
planning/moveit/src/z1planner/src/: planning.cpp
teleop/: processor.py  simulator.py  teleop.py  tracker.py
tests/: ikpy_test.py
vr_teleop/: controller_log.csv  processor.py  simulator.py  teleop.py  tracker.py  utils.py
z1/meshes/visual/: z1_Link00.stl  z1_Link01.stl  z1_Link06.stl
z1/urdf/: z1.urdf
